@@ -11,8 +11,8 @@ from fabric.colors import green, red
 
 
 if __name__ == '__main__':
-    local('flake8 --ignore=E126 --ignore=W391 --statistics'
-          ' --exclude=submodules,migrations,build .')
+    #local('flake8 --ignore=E126 --ignore=W391 --statistics'
+    #      ' --exclude=submodules,migrations,build .')
     local('coverage run --source="newsletter_signup" manage.py test -v 2'
           ' --traceback --failfast --settings=newsletter_signup.tests.settings'
           ' --pattern="*_tests.py"')
